// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabGroup /> Centered story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r2:"
          aria-selected="true"
          class="tabs__link"
          href="#:r2:"
          id=":r3:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r2:"
          aria-selected="false"
          class="tabs__link"
          href="#:r2:"
          id=":r3:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r2:"
          aria-selected="false"
          class="tabs__link"
          href="#:r2:"
          id=":r3:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r2:"
          aria-selected="false"
          class="tabs__link"
          href="#:r2:"
          id=":r3:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r3:-Tab-Title-1"
      id=":r2:"
      role="tabpanel"
    >
      <div
        class="max-w-xl"
      >
        <h3
          class="heading heading--headline-sm mb-6"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> Default story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="true"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r0:"
          aria-selected="false"
          class="tabs__link"
          href="#:r0:"
          id=":r1:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r1:-Tab-Title-1"
      id=":r0:"
      role="tabpanel"
    >
      <div
        class="max-w-xl"
      >
        <h3
          class="heading heading--headline-sm mb-6"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> TabWidthFull story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="true"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item tabs--width-full"
        role="presentation"
      >
        <a
          aria-controls=":r4:"
          aria-selected="false"
          class="tabs__link"
          href="#:r4:"
          id=":r5:-Tab-Title-4"
          role="tab"
          tabindex="-1"
        >
          Tab Title 4
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r5:-Tab-Title-1"
      id=":r4:"
      role="tabpanel"
    >
      <div
        class="max-w-xl"
      >
        <h3
          class="heading heading--headline-sm mb-6"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> WithTabIcons story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="true"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="1rem"
            style="--icon-size: 1rem;"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.85 17.1C6.7 16.45 7.65 15.9375 8.7 15.5625C9.75 15.1875 10.85 15 12 15C13.15 15 14.25 15.1875 15.3 15.5625C16.35 15.9375 17.3 16.45 18.15 17.1C18.7333 16.4167 19.1875 15.6417 19.5125 14.775C19.8375 13.9083 20 12.9833 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 12.9833 4.1625 13.9083 4.4875 14.775C4.8125 15.6417 5.26667 16.4167 5.85 17.1ZM12 13C11.0167 13 10.1875 12.6625 9.5125 11.9875C8.8375 11.3125 8.5 10.4833 8.5 9.5C8.5 8.51667 8.8375 7.6875 9.5125 7.0125C10.1875 6.3375 11.0167 6 12 6C12.9833 6 13.8125 6.3375 14.4875 7.0125C15.1625 7.6875 15.5 8.51667 15.5 9.5C15.5 10.4833 15.1625 11.3125 14.4875 11.9875C13.8125 12.6625 12.9833 13 12 13ZM12 22C10.6167 22 9.31667 21.7375 8.1 21.2125C6.88333 20.6875 5.825 19.975 4.925 19.075C4.025 18.175 3.3125 17.1167 2.7875 15.9C2.2625 14.6833 2 13.3833 2 12C2 10.6167 2.2625 9.31667 2.7875 8.1C3.3125 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.3125 8.1 2.7875C9.31667 2.2625 10.6167 2 12 2C13.3833 2 14.6833 2.2625 15.9 2.7875C17.1167 3.3125 18.175 4.025 19.075 4.925C19.975 5.825 20.6875 6.88333 21.2125 8.1C21.7375 9.31667 22 10.6167 22 12C22 13.3833 21.7375 14.6833 21.2125 15.9C20.6875 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6875 15.9 21.2125C14.6833 21.7375 13.3833 22 12 22ZM12 20C12.8833 20 13.7167 19.8708 14.5 19.6125C15.2833 19.3542 16 18.9833 16.65 18.5C16 18.0167 15.2833 17.6458 14.5 17.3875C13.7167 17.1292 12.8833 17 12 17C11.1167 17 10.2833 17.1292 9.5 17.3875C8.71667 17.6458 8 18.0167 7.35 18.5C8 18.9833 8.71667 19.3542 9.5 19.6125C10.2833 19.8708 11.1167 20 12 20ZM12 11C12.4333 11 12.7917 10.8583 13.075 10.575C13.3583 10.2917 13.5 9.93333 13.5 9.5C13.5 9.06667 13.3583 8.70833 13.075 8.425C12.7917 8.14167 12.4333 8 12 8C11.5667 8 11.2083 8.14167 10.925 8.425C10.6417 8.70833 10.5 9.06667 10.5 9.5C10.5 9.93333 10.6417 10.2917 10.925 10.575C11.2083 10.8583 11.5667 11 12 11Z"
            />
          </svg>
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="1rem"
            style="--icon-size: 1rem;"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 12h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2H9c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm6.18-6.99L18.1 2.45c-.42-.35-1.05-.3-1.41.13-.35.42-.29 1.05.13 1.41l3.07 2.56c.42.35 1.05.3 1.41-.13.36-.42.3-1.05-.12-1.41zM4.1 6.55l3.07-2.56c.43-.36.49-.99.13-1.41-.35-.43-.98-.48-1.4-.13L2.82 5.01c-.42.36-.48.99-.12 1.41.35.43.98.48 1.4.13zM12 4c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9zm0 16c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7z"
            />
          </svg>
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r6:"
          aria-selected="false"
          class="tabs__link"
          href="#:r6:"
          id=":r7:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="icon tab__icon"
            fill="currentColor"
            height="1rem"
            style="--icon-size: 1rem;"
            viewBox="0 0 24 24"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.9999 12.6004V9.00039C12.9999 8.71706 12.9041 8.47956 12.7124 8.28789C12.5207 8.09622 12.2832 8.00039 11.9999 8.00039C11.7166 8.00039 11.4791 8.09622 11.2874 8.28789C11.0957 8.47956 10.9999 8.71706 10.9999 9.00039V12.9754C10.9999 13.1087 11.0249 13.2379 11.0749 13.3629C11.1249 13.4879 11.1999 13.6004 11.2999 13.7004L14.0999 16.5004C14.2832 16.6837 14.5166 16.7754 14.7999 16.7754C15.0832 16.7754 15.3166 16.6837 15.4999 16.5004C15.6832 16.3171 15.7749 16.0837 15.7749 15.8004C15.7749 15.5171 15.6832 15.2837 15.4999 15.1004L12.9999 12.6004ZM11.9999 22.0004C10.7499 22.0004 9.57907 21.7629 8.4874 21.2879C7.39574 20.8129 6.44574 20.1712 5.6374 19.3629C4.82907 18.5546 4.1874 17.6046 3.7124 16.5129C3.2374 15.4212 2.9999 14.2504 2.9999 13.0004C2.9999 11.7504 3.2374 10.5796 3.7124 9.48789C4.1874 8.39622 4.82907 7.44622 5.6374 6.63789C6.44574 5.82956 7.39574 5.18789 8.4874 4.71289C9.57907 4.23789 10.7499 4.00039 11.9999 4.00039C13.2499 4.00039 14.4207 4.23789 15.5124 4.71289C16.6041 5.18789 17.5541 5.82956 18.3624 6.63789C19.1707 7.44622 19.8124 8.39622 20.2874 9.48789C20.7624 10.5796 20.9999 11.7504 20.9999 13.0004C20.9999 14.2504 20.7624 15.4212 20.2874 16.5129C19.8124 17.6046 19.1707 18.5546 18.3624 19.3629C17.5541 20.1712 16.6041 20.8129 15.5124 21.2879C14.4207 21.7629 13.2499 22.0004 11.9999 22.0004ZM2.0499 7.30039C1.86657 7.11706 1.7749 6.88372 1.7749 6.60039C1.7749 6.31706 1.86657 6.08372 2.0499 5.90039L4.8999 3.05039C5.08324 2.86706 5.31657 2.77539 5.5999 2.77539C5.88324 2.77539 6.11657 2.86706 6.2999 3.05039C6.48324 3.23372 6.5749 3.46706 6.5749 3.75039C6.5749 4.03372 6.48324 4.26706 6.2999 4.45039L3.4499 7.30039C3.26657 7.48372 3.03324 7.57539 2.7499 7.57539C2.46657 7.57539 2.23324 7.48372 2.0499 7.30039ZM21.9499 7.30039C21.7666 7.48372 21.5332 7.57539 21.2499 7.57539C20.9666 7.57539 20.7332 7.48372 20.5499 7.30039L17.6999 4.45039C17.5166 4.26706 17.4249 4.03372 17.4249 3.75039C17.4249 3.46706 17.5166 3.23372 17.6999 3.05039C17.8832 2.86706 18.1166 2.77539 18.3999 2.77539C18.6832 2.77539 18.9166 2.86706 19.0999 3.05039L21.9499 5.90039C22.1332 6.08372 22.2249 6.31706 22.2249 6.60039C22.2249 6.88372 22.1332 7.11706 21.9499 7.30039ZM11.9999 20.0004C13.9499 20.0004 15.6041 19.3212 16.9624 17.9629C18.3207 16.6046 18.9999 14.9504 18.9999 13.0004C18.9999 11.0504 18.3207 9.39622 16.9624 8.03789C15.6041 6.67956 13.9499 6.00039 11.9999 6.00039C10.0499 6.00039 8.39574 6.67956 7.0374 8.03789C5.67907 9.39622 4.9999 11.0504 4.9999 13.0004C4.9999 14.9504 5.67907 16.6046 7.0374 17.9629C8.39574 19.3212 10.0499 20.0004 11.9999 20.0004Z"
            />
          </svg>
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r7:-Tab-Title-1"
      id=":r6:"
      role="tabpanel"
    >
      <div
        class="max-w-xl"
      >
        <h3
          class="heading heading--headline-sm mb-6"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TabGroup /> WithTabIllustrations story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list tabs--has-divider tabs__list--align-center"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="true"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-1"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-12 w-12 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 1
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-2"
          role="tab"
          tabindex="-1"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-12 w-12 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 2
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls=":r8:"
          aria-selected="false"
          class="tabs__link"
          href="#:r8:"
          id=":r9:-Tab-Title-3"
          role="tab"
          tabindex="-1"
        >
          <div
            class="tab__illustration"
          >
            <div
              class="h-12 w-12 bg-utility-warning-lowEmphasis"
            />
          </div>
          Tab Title 3
          <div
            aria-hidden="true"
            class="tab__highlight"
          />
        </a>
      </li>
    </ul>
  </div>
  <div>
    <div
      aria-hidden="false"
      aria-labelledby=":r9:-Tab-Title-1"
      id=":r8:"
      role="tabpanel"
    >
      <div
        class="max-w-xl"
      >
        <h3
          class="heading heading--headline-sm mb-6"
        >
          Tab 1
        </h3>
        <p
          class="text text--body-md"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
